tests/reference/asr-test_dict7-1415e14.stderr
semantic error: unhashable type in dict: 'slice'
 --> tests/errors/test_dict7.py:4:11
  |
4 |     print(d[1:2])
  |           ^^^^^^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
